5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1680_1932.log
== TEST (2019-04-30 07:53:26) 
-- CODE:
#coleta das caracteristicas:
a = float(input("distância entre os olhos, da Imagem 1: "))
b = float(input("distância entre  o nariz e o queixo, da Imagem 1: "))
c = float(input("distância entre os olhos, da Imagem 2: "))
d = float(input("distância entre  o nariz e o queixo, da Imagem 2: "))
e = float(input("distância entre os olhos, da Imagem 3: "))
f = float(input("distância entre  o nariz e o queixo, da Imagem 3: "))

f1 = round(a/b, 2)
f2 = round(c/d, 2)
f3 = round(e/f, 2)

f12 = abs(f1-f2)
f13 = abs(f1-f3)
f23 = abs(f2-f3)

if(f12 < F13) and (f12 < F23):
	print(1,"e", 2)
elif(f13 < F12) and (f13 < F23):
	print(1,"e", 3)
else:
	print(2,"e", 3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    if(f12 < F13) and (f12 < F23):
NameError: name 'F13' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 07:54:17) 
-- CODE:
#coleta das caracteristicas:
a = float(input("distancia entre os olhos, da Imagem 1: "))
b = float(input("distancia entre  o nariz e o queixo, da Imagem 1: "))
c = float(input("distancia entre os olhos, da Imagem 2: "))
d = float(input("distancia entre  o nariz e o queixo, da Imagem 2: "))
e = float(input("distancia entre os olhos, da Imagem 3: "))
f = float(input("distancia entre  o nariz e o queixo, da Imagem 3: "))

f1 = round(a/b, 2)
f2 = round(c/d, 2)
f3 = round(e/f, 2)

f12 = abs(f1-f2)
f13 = abs(f1-f3)
f23 = abs(f2-f3)

if(f12 < F13) and (f12 < F23):
	print(1,"e", 2)
elif(f13 < F12) and (f13 < F23):
	print(1,"e", 3)
else:
	print(2,"e", 3)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    if(f12 < F13) and (f12 < F23):
NameError: name 'F13' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 07:55:21) 
-- CODE:
#coleta das caracteristicas:
a = float(input("distancia entre os olhos, da Imagem 1: "))
b = float(input("distancia entre  o nariz e o queixo, da Imagem 1: "))
c = float(input("distancia entre os olhos, da Imagem 2: "))
d = float(input("distancia entre  o nariz e o queixo, da Imagem 2: "))
e = float(input("distancia entre os olhos, da Imagem 3: "))
f = float(input("distancia entre  o nariz e o queixo, da Imagem 3: "))

f1 = round(a/b, 2)
f2 = round(c/d, 2)
f3 = round(e/f, 2)

f12 = abs(f1-f2)
f13 = abs(f1-f3)
f23 = abs(f2-f3)

if(f12 < f13) and (f12 < f23):
	print(1,"e", 2)
elif(f13 < f12) and (f13 < f23):
	print(1,"e", 3)
else:
	print(2,"e", 3)
	

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 07:56:10) 
-- CODE:
#coleta das caracteristicas:
a = float(input("distancia entre os olhos, da Imagem 1: "))
b = float(input("distancia entre  o nariz e o queixo, da Imagem 1: "))
c = float(input("distancia entre os olhos, da Imagem 2: "))
d = float(input("distancia entre  o nariz e o queixo, da Imagem 2: "))
e = float(input("distancia entre os olhos, da Imagem 3: "))
f = float(input("distancia entre  o nariz e o queixo, da Imagem 3: "))

f1 = round(a/b, 2)
f2 = round(c/d, 2)
f3 = round(e/f, 2)

f12 = abs(f1-f2)
f13 = abs(f1-f3)
f23 = abs(f2-f3)

if(f12 < f13) and (f12 < f23):
	print(1,"e", 2)
elif(f13 < f12) and (f13 < f23):
	print(1,"e", 3)
else:
	print(2,"e", 3)
	

-- EXECUTION TIME:
0.186799
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
